sillevis/eric/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eric
  namespace: sillevis
  labels:
    app: eric
spec:
  template:
  selector:
    matchLabels:
      app: eric
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        app: eric
    spec:
      containers:
      - name: eric
        image: deviavir/eric:latest
        imagePullPolicy: "Always"
        ports:
        - name: http
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 30
