sillevis/eric/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eric
  namespace: sillevis
  labels:
    app: eric
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: eric
