sillevis/eric/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eric
  namespace: sillevis
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
  - host: eric.sillevis.net
    http:
      paths:
      - backend:
          serviceName: eric
          servicePort: 80
        path: /
  tls:
  - hosts:
    - eric.sillevis.net
    secretName: eric-sillevis-net-tls
